--- a/givemeasign/templates/detect.html
+++ b/givemeasign/templates/detect.html
@@ -18,6 +18,7 @@ limitations under the License. -->
   <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/pose/pose.js" crossorigin="anonymous"></script>
   <script type="module" src="{% static 'detect.js' %}"></script> 
 </head>
 
@@ -25,15 +26,6 @@ limitations under the License. -->
   <h1>Hand landmark detection using the MediaPipe HandLandmarker task</h1>
 
   <section id="demos" class="invisible">
-    <h2>Demo: Detecting Images</h2>
-    <p><b>Click on an image below</b> to see the key landmarks of the hands.</p>
-
-    <div class="detectOnClick">
-      <img src="https://assets.codepen.io/9177687/hand-ge4ca13f5d_1920.jpg" width="100%" crossorigin="anonymous" title="Click to get detection!" />
-    </div>
-    <div class="detectOnClick">
-      <img src="https://assets.codepen.io/9177687/couple-gb7cb5db4c_1920.jpg" width="100%" crossorigin="anonymous" title="Click to get detection!" />
-    </div>
 
     <h2>Demo: Webcam continuous hands landmarks detection</h2>
     <p>Hold your hand in front of your webcam to get real-time hand landmarker detection.</br>Click <b>enable webcam</b> below and grant access to the webcam if prompted.</p>
