--- a/givemeasign/templates/detect.html
+++ b/givemeasign/templates/detect.html
@@ -14,7 +14,7 @@ limitations under the License. -->
 <!DOCTYPE html>
 <head>
   {% load static %}
-  <link href="{% static 'detect.css' %}" rel="stylesheet">
+  <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
   <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js" crossorigin="anonymous"></script>
@@ -23,12 +23,12 @@ limitations under the License. -->
 </head>
 
 <body>
-  <h1>Hand landmark detection using the MediaPipe HandLandmarker task</h1>
+  <h1>Hand and pose landmark detection using the MediaPipe</h1>
 
   <section id="demos" class="invisible">
 
-    <h2>Demo: Webcam continuous hands landmarks detection</h2>
-    <p>Hold your hand in front of your webcam to get real-time hand landmarker detection.</br>Click <b>enable webcam</b> below and grant access to the webcam if prompted.</p>
+    <h2>Demo: Webcam continuous landmarks detection</h2>
+    <p>Hold your hands (and upper body) in front of your webcam to get real-time landmarker detection.</br>Click <b>enable webcam</b> below and grant access to the webcam if prompted.</p>
 
     <div id="liveView" class="videoView">
       <button id="webcamButton" class="mdc-button mdc-button--raised">
