--- a/givemeasign/templates/detect.html
+++ b/givemeasign/templates/detect.html
@@ -23,12 +23,15 @@ limitations under the License. -->
 </head>
 
 <body>
-  <h1>Hand and pose landmark detection using the MediaPipe</h1>
+  <h1>GiveMeASign: Sign Language Translator</h1>
 
   <section id="demos" class="invisible">
 
-    <h2>Demo: Webcam continuous landmarks detection</h2>
-    <p>Hold your hands (and upper body) in front of your webcam to get real-time landmarker detection.</br>Click <b>enable webcam</b> below and grant access to the webcam if prompted.</p>
+    <!-- <h2>Demo: Webcam continuous landmarks detection</h2> -->
+    <p>Instructions: Click 'Enable Webcam' to start your video.
+      Once video and landmarks are loaded (might take a few seconds), start signing on the screen
+      and watch your translated text appear. Click 'Disable Predictions' to stop predicting gestures.
+    </p>
     <div id="mainSection" class="flex-container">
       <div id="liveView" class="videoView">
         <button id="webcamButton" class="mdc-button mdc-button--raised">
