UI changes - added home and instructions page

--- a/givemeasign/templates/detect.html
+++ b/givemeasign/templates/detect.html
@@ -47,6 +47,12 @@ limitations under the License. -->
       <span class="mdc-button__ripple"></span>
       <span class="mdc-button__label">ENABLE WEBCAM</span>
     </button>
+    <a href="{% url 'home' %}">
+    <button id="homeButton" class="mdc-button mdc-button--raised">
+      <span class="mdc-button__ripple"></span>
+      <span href="home.html"  class="mdc-button__label">HOME</span>
+    </button>
+  </a>
   </div>
   </section>
   
