--- a/givemeasign/static/detect.css
+++ b/givemeasign/static/detect.css
@@ -149,3 +149,8 @@ footer {
   bottom: 5vh; /* Adjust this value to set the distance from the bottom */
   right: 5vw; /* Adjust this value to set the distance from the right */
 }
+#homeButton {
+  position: absolute;
+  bottom: 5vh;
+  right: 85vw;
+}
