added text for user to wait a few seconds

--- a/givemeasign/templates/instructions.html
+++ b/givemeasign/templates/instructions.html
@@ -43,7 +43,7 @@
         <br>
         On that page, click 'Enable Webcam' to start your video.
         <br>
-        Wait about 10 seconds to load the video and landmakrs
+        Wait about 5-10 seconds to load the video and landmakrs
         <br>
         Once loaded, start signing on the screen and watch your translated text appear. 
         <br>
