--- a/givemeasign/templates/detect.html
+++ b/givemeasign/templates/detect.html
@@ -59,6 +59,7 @@ limitations under the License. -->
       <span href="home.html"  class="mdc-button__label">HOME</span>
     </button>
     </a>
+    <div id="bleSuccess"></div>
     <button id="bleButton" class="mdc-button mdc-button--raised">
       <span class="mdc-button__ripple"></span>
       <span class="mdc-button__label">CONNECT BLUETOOTH</span>
